Bug 1236823 - move smart-icon to fxos-tv-icon. r=rexboy

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>smart-icons</title>
+    <title>fxos-tv-icons</title>
     <style>
       * {
         margin: 0;
@@ -106,11 +106,11 @@
         display: none;
       }
     </style>
-    <link rel="stylesheet" href="smart-icons.css">
+    <link rel="stylesheet" href="fxos-tv-icons.css">
   </head>
   <body>
     <input id="show-view-boxes" type="checkbox">
-    <a href="#"><h1>Smart Icons</h1></a>
+    <a href="#"><h1>Firefox OS TV Icons</h1></a>
     <section>
 
       <a href="#add-device" id="add-device" data-icon="add-device"></a>
